# oyez-api-wrapper

./: README.md  oyez-api-wrapper.py  pyproject.toml  setup.cfg
src/oyez_api_wrapper.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/oyez_api_wrapper_teeman22.egg-info/: PKG-INFO  SOURCES.txt
