[metadata]
name = oyez_api_wrapper
version = 0.0.3
author = Tyler Zars
author_email = tyler@zars.me
description = A wrapper for the Oyez API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tylzars/oyez-api-wrapper
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
